tests/basic/check/assert/150.pan.out
tests/basic/check/assert/150.pan:4:1-5: error: unable to verify type of f150
tests/basic/check/assert/150.pan:7:1-5: error: unable to verify type of f151
tests/basic/check/assert/150.pan:10:1-5: error: unable to verify type of f152
tests/basic/check/assert/150.pan:13:1-5: error: unable to verify type of f153